Fix z-index for chatbot

--- a/Chatbot/src/components/Chatbot/styles/Chatbot.css
+++ b/Chatbot/src/components/Chatbot/styles/Chatbot.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 30px;
     right: 30px;
-    z-index: 50;
+    z-index: 95;
     height: 600px;
     width: 400px;
     box-shadow: 5px 5px 30px 0 rgba(0, 0, 0, 0.1);
